cabal-version:       >=1.10

name:           logfmt
version:        0.0.0
synopsis:       Formatting
description:    Please see the README on GitHub at https://github.com/cmk/logfmt#readme
category:       Text, System
homepage:       https://github.com/cmk/logfmt#readme
bug-reports:    https://github.com/cmk/logfmt/issues
author:         Chris McKinlay
maintainer:     chris.mckinlay@gmail.com
copyright:      2020-2021 Chris McKinlay
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
      README.md
      ChangeLog.md
tested-with:
      GHC == 8.10.1
source-repository head
  type: git
  location: https://github.com/cmk/logfmt

library
  exposed-modules:
      Data.Fmt
      Data.Fmt.Time
      Data.Fmt.ByteString
      Data.Fmt.Text

  other-modules:
      Paths_logfmt
  hs-source-dirs:
      src
  build-depends:
      base >=4.14 && <5
    , bytestring
    , profunctors
    , text
    --, unliftio-core
    --, transformers
    , ansi-terminal
    , time
    , fast-logger
    -- , async
  default-language: Haskell2010

  default-extensions:
